# tortoise-orm-extra-duckdb

./: README.md  pyproject.toml
src/pypika_tortoise/dialects/: duckdb.py
src/tortoise/: patch.py
src/tortoise/backends/duckdb/: client.py  executor.py
