[project]
name = "tortoise-orm-extra-duckdb"
version = "2025.8.25"
description = "Tortoise ORM backend for DuckDB"
authors = [{ name = "fairydream", email = "cn.fairydream@outlook.com" }]
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "aio-duckdb",
    "tortoise-orm",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
